# customer-portfolio-optimizer

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: streamlit_app.py
examples/: example_request.json
src/portfolio_optimizer/: __init__.py  api.py  cli.py  data.py  explain.py  optimizer.py  risk_mapping.py  schemas.py
tests/: test_optimizer.py
