[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-portfolio-optimizer"
version = "0.1.0"
description = "Customer-aware portfolio optimization engine with FastAPI, CLI, tests, and optional Streamlit UI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Generated Project" }
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "pydantic>=2",
  "fastapi",
  "uvicorn"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov"
]
ui = [
  "streamlit"
]

[project.scripts]
portfolio-optimize = "portfolio_optimizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["src/portfolio_optimizer"]
